# game-of-death

./: .gitignore  CMakeLists.txt  LICENSE
include/: glad.c
include/glad/: glad.h
src/: classes.h  main.cpp
